--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,41 @@ name: CI
 
 on:
   push:
+    branches: [ dev, main ]
+  pull_request:
+    branches: [ dev, main ]
+
+jobs:
+  test-and-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements-dev.txt ]; then python -m pip install -r requirements-dev.txt; fi
+
+      - name: Check large files
+        run: python scripts/check_large_files.py --max-mb 50
+
+      - name: Run linter (ruff)
+        run: |
+          if command -v ruff >/dev/null 2>&1; then ruff check .; else echo "ruff not installed"; fi
+
+      - name: Run tests
+        run: |
+          if command -v pytest >/dev/null 2>&1; then pytest -q; else echo "pytest not installed"; fi
+name: CI
+
+on:
+  push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
